--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/kart_/eclipse/jee-2022-03/eclipse/plugins/hamcrest-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kart_/eclipse-workspace/Sprint1Tasca7/gson-2.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
